# web-development-course

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: app.py  routers.py  settings.py  start.py
